--- a/index.html
+++ b/index.html
@@ -10,17 +10,45 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     
         <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-        <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+        <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
 
 
 
 </head>
 <body>
     <!-- header -->
+    <div class="jumbotron">
+        <div class="container">
+            <h1>Car Giphys in a Jiffy!</h1>
+        </div>
+    </div>
+
     <!-- buttons -->
+    <div id="gifButtonsDisplay" class="container">
+    </div>
+
     <!-- main container -->
+    <div class="container">
+    <div class="col-xs-9 col-sm-9 col-md-9 col-lg-9">
+
     <!-- gifs layout -->
+
+    <div id="gifsView"></div>
+</div>
     <!-- form -->
+    <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+        <form id="gif-form" role="form">
+            <h2><legend>Car Submission</legend></h2>
+            <div class="form-group">
+                <label for="car-input">Add your car below</label>
+                <input type="text" id="car-input">
+            </div>
+            <input id="addGif" type="submit" value="Add your car" class="btn btn-primary">
+            <input id="removeGif" type="submit" value="Remove last car" class="btn btn-primary">
+        </form>    
+    </div>
+</div>
+
     <!-- footer as needed -->
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
