more css changes/added giphy js

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <label for="car-input">Add another car below</label>
                 <input type="text" id="car-input">
             </div>
-            <input id="addGif" type="submit" value="Add your car" class="btn btn-primary">
+            <input id="addGif" type="submit" value="Add another car" class="btn btn-primary">
             <input id="removeGif" type="submit" value="Remove last car" class="btn btn-primary">
         </form>    
     </div>
