almost final commit - images and ratings returning

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <form id="gif-form" role="form">
             <h2><legend>Car Submission</legend></h2>
             <div class="form-group">
-                <label for="car-input">Add another car below</label>
+                <label for="car-input">Add Another Car Below</label>
                 <input type="text" id="car-input">
             </div>
             <input id="addGif" type="submit" value="Add another car" class="btn btn-primary">
